--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,52 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
 body {
   font-family: 'Merriweather', serif;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.6;
   margin: 0;
   padding: 0;
 }
 .content {
   text-align: justify;
 }
+p {
+  margin-bottom: 20px;
+}
 h1 {
+  margin-top: 100px;
   text-align: center;
-  font-size: 28px
+  font-weight: 700;
+  font-size: 45px;
 }
 h2 {
   font-style: italic;
   text-align: center;
-  font-size: 22px
+  font-size: 26px;
+}
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 2px solid #cd0000;
 }
 .videoWrapper {
 	position: relative;
@@ -32,6 +63,32 @@ h2 {
 }
 .video {
   margin: 20px 0;
+}
+ul.share-buttons{
+  position: fixed;
+  right:0;
+  padding: 5px;
+  list-style: none;
+
+  font-size: 14px;
+}
+
+ul.share-buttons li{
+  display: inline;
+}
+
+ul.share-buttons .sr-only {
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+ul.share-buttons a {
+  color: #000;
 }
 footer {
   padding: 20px;
